src/tui/views/snapshots/awsui__tui__views__profile_select__tests__render_returns_snapshot_when_no_profiles.snap
---
source: src/tui/views/profile_select.rs
expression: buffer_to_string(&terminal)
---
┌ Select Profile ────────────────────────────────────────────────────┐
│Name                 Region             URL                         │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
 j/k:move  Enter:select  /:filter  q:quit
