src/tui/views/snapshots/awsui__tui__views__profile_select__tests__render_returns_snapshot_when_rendered.snap
---
source: src/tui/views/profile_select.rs
expression: buffer_to_string(&terminal)
---
┌ Select AWS SSO Profile ──────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│  ▶ dev-account                                           │
│    staging-account                                       │
│    prod-account                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 j/k:select  Enter:confirm  q:quit
