src/tui/views/snapshots/awsui__tui__views__profile_select__tests__render_returns_snapshot_when_sso_login_dialog_empty_output.snap
---
source: src/tui/views/profile_select.rs
expression: buffer_to_string(&terminal)
---
┌ Select Profile ────────────────────────────────────────────────────┐
│Name                 Region             URL                         │
│dev-account          ap-northeast-1     https://dev.awsapps.com/star│
│staging              us-east-1          https://staging.awsapps.com/│
│production           ap-northeast-1     https://prod.awsapps.com/sta│
│                                                                    │
│             ┌ SSO Login ─────────────────────────────┐             │
│             │                                        │             │
│             │                                        │             │
│             │                                        │             │
│             │     ⠋ Waiting for authentication...    │             │
│             │                                        │             │
│             │              [Esc] Cancel              │             │
│             └────────────────────────────────────────┘             │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
 j/k:move  Enter:select  /:filter  q:quit
